samples/_failures_safe/1761332993_a17f4c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4bc4eca3.c: In function ‘main’:
./samples/SAFE/__tmp_4bc4eca3.c:156:5: error: expected expression at end of input
  156 |     mat2.rows = read_int("Rows: ", 1,
      |     ^~~~
./samples/SAFE/__tmp_4bc4eca3.c:156:5: error: expected declaration or statement at end of input
